--- a/landrules-react/public/index.html
+++ b/landrules-react/public/index.html
@@ -14,6 +14,7 @@
 
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+        <script src="./typingdna.js"></script>
 
         <title>LandRules</title>
     </head>
